--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ ul{
 }
 
 img {
-    transition: all 150ms;
+    transition: transform .3s;
 }
   
 img:hover {
@@ -31,15 +31,41 @@ body *{
     line-height: 160%;
 }
 
+header{
+    padding-top: 32px;
+    height: calc(120px+32px);
+}
+
+header div{
+    width: 120px;
+    margin: auto;
+    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+
+    border-radius: 50%;
+
+    display: flex;
+    padding: 4px;
+
+    animation: fromTop .7s .4s backwards;
+
+}
+
+header div:hover{
+    transform: scale(1.1)
+}
+
+header img{
+    width: 100%;
+    border-radius: 50%;
+}
+
 main{
     max-width: 500px;
     width: 90%;
-    margin: auto;
+    margin: 32px auto;
 
     display: grid;
     gap: 24px;
-
-    margin-top: 32px;
 }
 
 section {
@@ -83,6 +109,7 @@ section ul{
 .channel-list img{
     border-radius: 50%;
     width: 70px;
+    border: 1px solid #443E54;
 }
 
 footer {
@@ -99,4 +126,44 @@ footer {
 
     display: flex;
     justify-content: center;
+}
+
+@keyframes fromTop{
+    from {
+        opacity: 0;
+        transform: translateY(-30px)
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0)
+    }
+}
+
+main section{
+    animation: fromBottom .7s backwards;
+}
+
+main section:nth-child(1){
+    animation-delay: 0;
+}
+
+main section:nth-child(2){
+    animation-delay: .4s
+}
+
+main section:nth-child(3){
+    animation-delay: .8s;
+}
+
+@keyframes fromBottom{
+    from {
+        opacity: 0;
+        transform: translateX(-30px)
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0)
+    }
 }
